--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -5,17 +5,293 @@ $color-primario-4: hsl(183, 100%, 36%);
 $color-primario-5: hsl(194, 100%, 33%);
 $cinco-claro: hsl(194, 100%, 63%);
 
-@mixin a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 1.5rem;
+
+// -------- Width MQ --------
+
+@mixin w1900 {
+  @media (max-width:1900px) {
+    @content;
+  }
+}
+
+@mixin w1726 {
+  @media (max-width:1726px) {
+    @content;
+  }
+}
+
+@mixin w1680 {
+  @media (max-width:1680px) {
+    @content;
+  }
+}
+
+@mixin w1638 {
+  @media (max-width:1638px) {
+    @content;
+  }
+}
+
+@mixin w1566 {
+  @media (max-width:1566px) {
+    @content;
+  }
+}
+
+@mixin w1460 {
+  @media (max-width:1460px) {
+    @content;
+  }
+}
+
+@mixin w1440 {
+  @media (max-width:1440px) {
+    @content;
+  }
+}
+
+@mixin w1377 {
+  @media (max-width:1377px) {
+    @content;
+  }
+}
+
+@mixin w1350 {
+  @media (max-width:1350px) {
+    @content;
+  }
+}
+
+@mixin w1330 {
+  @media (max-width:1330px) {
+    @content;
+  }
+}
+
+@mixin w1260 {
+  @media (max-width:1260px) {
+    @content;
+  }
+}
+
+@mixin w1250 {
+  @media (max-width:1250px) {
+    @content;
+  }
+}
+
+@mixin w1200 {
+  @media (max-width:1200px) {
+    @content;
+  }
+}
+
+@mixin w1150 {
+  @media (max-width:1150px) {
+    @content;
+  }
+}
+
+@mixin w1024 {
+  @media (max-width:1024px) {
+    @content;
+  }
+}
+
+@mixin w990 {
+  @media (max-width:990px) {
+    @content;
+  }
+}
+
+@mixin w924 {
+  @media (max-width:924px) {
+    @content;
+  }
+}
+
+@mixin w879 {
+  @media (max-width:879px) {
+    @content;
+  }
+}
+
+@mixin w860 {
+  @media (max-width:860px) {
+    @content;
+  }
+}
+
+@mixin w835 {
+  @media (max-width:835px) {
+    @content;
+  }
+}
+
+@mixin w800 {
+  @media (max-width:800px) {
+    @content;
+  }
+}
+
+@mixin w740 {
+  @media (max-width:740px) {
+    @content;
+  }
+}
+
+@mixin w725 {
+  @media (max-width:725px) {
+    @content;
+  }
+}
+
+@mixin w720 {
+  @media (max-width:720px) {
+    @content;
+  }
+}
+
+@mixin w688 {
+  @media (max-width:688px) {
+    @content;
+  }
+}
+
+@mixin w670 {
+  @media (max-width:670px) {
+    @content;
+  }
+}
+
+@mixin w660 {
+  @media (max-width:660px) {
+    @content;
+  }
+}
+
+@mixin w650 {
+  @media (max-width:650px) {
+    @content;
+  }
 }
 
 @mixin maxw600 {
   @media (max-width: 600px) {
     @content;
   }
+}
 
+@mixin w579 {
+  @media (max-width:579px) {
+    @content;
+  }
+}
+
+@mixin w560 {
+  @media (max-width:560px) {
+    @content;
+  }
+}
+
+@mixin w528 {
+  @media (max-width:528px) {
+    @content;
+  }
+}
+
+@mixin w500 {
+  @media (max-width:500px) {
+    @content;
+  }
+}
+
+@mixin w478 {
+  @media (max-width:478px) {
+    @content;
+  }
+}
+
+@mixin w442 {
+  @media (max-width:442px) {
+    @content;
+  }
+}
+
+@mixin w430 {
+  @media (max-width:430px) {
+    @content;
+  }
+}
+
+@mixin w420 {
+  @media (max-width:420px) {
+    @content;
+  }
+}
+
+@mixin w396 {
+  @media (max-width:396px) {
+    @content;
+  }
+}
+
+@mixin w390 {
+  @media (max-width:390px) {
+    @content;
+  }
+}
+
+@mixin w378 {
+  @media (max-width:378px) {
+    @content;
+  }
+}
+
+@mixin w370 {
+  @media (max-width:370px) {
+    @content;
+  }
+}
+
+@mixin w360 {
+  @media (max-width:360px) {
+    @content;
+  }
+}
+
+@mixin w355 {
+  @media (max-width:355px) {
+    @content;
+  }
+}
+
+@mixin w336 {
+  @media (max-width:336px) {
+    @content;
+  }
+}
+
+// ---- Height MQ ----
+
+@mixin h900 {
+  @media (max-height:900px) {
+    @content;
+  }
+}
+
+@mixin h800 {
+  @media (max-height:800px) {
+    @content;
+  }
+}
+
+// ---- Max height y width ----
+
+@mixin h900w1260 {
+  @media (max-height:900px) and (max-width:1260px) {
+    @content
+  }
 }
 
 * {
@@ -26,10 +302,22 @@ $cinco-claro: hsl(194, 100%, 63%);
   scroll-behavior: smooth;
 }
 
+@mixin a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
 nav ul li {
   list-style-type: none;
   display: inline-block;
   padding: .8rem 2.5rem;
+  @include w1566 () {
+    padding: .8rem 2rem;
+  }
+  @include w1440 () {
+    padding: .8rem 1.5rem;
+  }
 }
 
 nav ul li a {
@@ -58,4 +346,12 @@ h4 {
   color: $color-primario-5;
   letter-spacing: 2px;
   font-size: 1.6rem;
+}
+
+// ---- Min Width MQ ----
+
+@mixin minw800 {
+  @media (min-width:800px) {
+    @content
+  }
 }
