--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ h4 {
   font-size: 1.2rem;
   background-color: white;
   width: 100%;
-  height: 150px;
+  height: 100px;
 }
 @media (max-width: 1726px) {
   .hero__nav {
@@ -309,6 +309,7 @@ h4 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 75px 75px;
+    height: 150px;
   }
 }
 @media (max-width: 800px) {
@@ -358,6 +359,11 @@ h4 {
   padding: 0 15%;
   line-height: 75px;
   background: #fff;
+}
+@media (max-width: 500px) {
+  .hamburguer__nav {
+    padding: 0 10%;
+  }
 }
 
 .hamburguer__input {
@@ -485,6 +491,11 @@ h4 {
     padding: 140px 70px;
   }
 }
+@media (max-width: 600px) {
+  .portada {
+    padding: 120px 30px;
+  }
+}
 .portada__cont-type {
   position: absolute;
   left: 5%;
@@ -520,6 +531,26 @@ h4 {
     font-size: 3rem;
   }
 }
+@media (max-width: 720px) {
+  .portada__cont-type h2 {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 528px) {
+  .portada__cont-type h2 {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 430px) {
+  .portada__cont-type h2 {
+    font-size: 1.7rem;
+  }
+}
+@media (max-width: 378px) {
+  .portada__cont-type h2 {
+    font-size: 1.5rem;
+  }
+}
 .portada__cont-type span {
   font-size: 6.96rem;
 }
@@ -542,6 +573,26 @@ h4 {
 @media (max-width: 924px) {
   .portada__cont-type span {
     font-size: 3rem;
+  }
+}
+@media (max-width: 720px) {
+  .portada__cont-type span {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 528px) {
+  .portada__cont-type span {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 430px) {
+  .portada__cont-type span {
+    font-size: 1.7rem;
+  }
+}
+@media (max-width: 378px) {
+  .portada__cont-type span {
+    font-size: 1.5rem;
   }
 }
 .portada__multitext {
@@ -588,6 +639,21 @@ h4 {
     order: 30;
   }
 }
+@media (max-width: 720px) {
+  .portada__cont-frase-quote {
+    margin: 25px 0;
+  }
+}
+@media (max-width: 500px) {
+  .portada__cont-frase-quote {
+    margin: 15px 0;
+  }
+}
+@media (max-width: 378px) {
+  .portada__cont-frase-quote {
+    margin: 10px 0;
+  }
+}
 .portada__cont-frase-quote .portada__quote {
   margin: 80px 25px 0 0;
   align-self: end;
@@ -605,6 +671,16 @@ h4 {
 @media (max-height: 900px) {
   .portada__cont-frase-quote .portada__quote {
     transform: translateY(-15px);
+  }
+}
+@media (max-width: 500px) {
+  .portada__cont-frase-quote .portada__quote {
+    transform: translateY(-22.5px);
+  }
+}
+@media (max-width: 378px) {
+  .portada__cont-frase-quote .portada__quote {
+    font-size: 1rem;
   }
 }
 .portada__cont-frase-quote .portada__comillas {
@@ -628,6 +704,11 @@ h4 {
     transform: translateY(-5px);
   }
 }
+@media (max-width: 378px) {
+  .portada__cont-frase-quote .portada__comillas {
+    font-size: 5rem;
+  }
+}
 .portada__frase {
   font-size: 2.1rem;
   font-weight: 300;
@@ -640,6 +721,22 @@ h4 {
 @media (max-width: 1638px) {
   .portada__frase {
     font-size: 1.8rem;
+  }
+}
+@media (max-width: 720px) {
+  .portada__frase {
+    font-size: 1.3rem;
+  }
+}
+@media (max-width: 500px) {
+  .portada__frase {
+    padding-right: 40px;
+  }
+}
+@media (max-width: 378px) {
+  .portada__frase {
+    font-size: 1.1rem;
+    padding-right: 35px;
   }
 }
 .portada__frase span {
@@ -777,6 +874,18 @@ h4 {
   .portada__img {
     bottom: 270px;
     right: 50px;
+  }
+}
+@media (max-width: 500px) {
+  .portada__img {
+    width: 300px;
+    height: 300px;
+  }
+}
+@media (max-width: 378px) {
+  .portada__img {
+    width: 225px;
+    height: 225px;
   }
 }
 
