--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -109,6 +109,7 @@
   text-decoration: none;
   @include w420 () {
     font-size: 1.5rem;
+    transform: translateY(5px);
   }
   span {
     color: $color-primario-4;
