--- a/css/styles.css
+++ b/css/styles.css
@@ -510,6 +510,11 @@ h4 {
     padding: 120px 30px;
   }
 }
+@media (max-width: 500px) {
+  .portada {
+    margin-top: 25px;
+  }
+}
 @media (max-width: 430px) {
   .portada {
     padding: 120px 20px;
