--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,7 @@ h4 {
   background-color: white;
   width: 100%;
   height: 100px;
+  border-bottom: 0.1px solid rgba(0, 0, 0, 0.3529411765);
 }
 @media (max-width: 1726px) {
   .hero__nav {
@@ -895,7 +896,7 @@ h4 {
   .portada__img {
     position: static;
     order: 20;
-    animation: none;
+    animation: movimiento-circulo 8s ease-in-out infinite;
     opacity: 1;
     width: 355px;
     height: 355px;
@@ -975,8 +976,30 @@ h4 {
   position: relative;
   transform: translateY(-100px);
 }
+@media (max-width: 1680px) {
+  .about {
+    background-image: none;
+  }
+}
 .about__main {
   transform: translateX(-170px);
+}
+@media (max-width: 1680px) {
+  .about__main {
+    transform: translateX(0px);
+  }
+}
+@media (max-width: 1150px) {
+  .about__main {
+    display: flex;
+    flex-direction: column;
+    gap: 120px;
+  }
+}
+@media (max-width: 528px) {
+  .about__main {
+    gap: 60px;
+  }
 }
 .about__main span {
   font-family: "Josefin Sans", sans-serif;
@@ -994,6 +1017,21 @@ h4 {
   position: relative;
   transform: scale(1.5);
   margin-top: -150px;
+}
+@media (max-width: 1150px) {
+  .about__person {
+    order: 20;
+  }
+}
+@media (max-width: 528px) {
+  .about__person {
+    transform: scale(1.2);
+  }
+}
+@media (max-width: 378px) {
+  .about__person {
+    transform: scale(1);
+  }
 }
 .about__person-container {
   aspect-ratio: 1/1.4;
@@ -1028,6 +1066,24 @@ h4 {
 .about__text {
   width: 550px;
 }
+@media (max-width: 1150px) {
+  .about__text {
+    order: 70;
+  }
+}
+@media (max-width: 720px) {
+  .about__text {
+    width: 75%;
+  }
+}
+@media (max-width: 478px) {
+  .about__text {
+    width: 82.5%;
+  }
+  .about__text .about__title {
+    font-size: 3.25rem;
+  }
+}
 .about__main {
   width: 1130px;
   max-width: 95%;
@@ -1041,6 +1097,12 @@ h4 {
   text-transform: capitalize;
   margin-bottom: 20px;
 }
+@media (max-width: 1150px) {
+  .about__text h2 {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+}
 .about__text h5 {
   letter-spacing: 2px;
   font-size: 1.375rem;
@@ -1052,6 +1114,11 @@ h4 {
   font-size: 1.125rem;
   margin-bottom: 45px;
 }
+@media (max-width: 378px) {
+  .about__text p {
+    font-size: 1rem;
+  }
+}
 .about a {
   text-decoration: none;
   color: #fff;
@@ -1062,6 +1129,12 @@ h4 {
   gap: 20px;
   align-items: center;
   color: rgba(90, 90, 90, 0.8);
+}
+@media (max-width: 720px) {
+  .about__cont-btn-texto {
+    flex-direction: column;
+    gap: 30px;
+  }
 }
 .about__cont-btn-texto span {
   text-align: center;
@@ -1081,6 +1154,11 @@ h4 {
   top: 37.5%;
   width: 80px;
   height: 225px;
+}
+@media (max-width: 1250px) {
+  .about__socials {
+    display: none;
+  }
 }
 .about__socials ul {
   display: flex;
