--- a/css/styles.css
+++ b/css/styles.css
@@ -566,6 +566,11 @@ h4 {
     font-size: 2rem;
   }
 }
+@media (max-width: 500px) {
+  .portada__cont-type h2 {
+    margin-bottom: 15px;
+  }
+}
 @media (max-width: 430px) {
   .portada__cont-type h2 {
     font-size: 1.7rem;
