--- a/css/styles.css
+++ b/css/styles.css
@@ -348,6 +348,10 @@ h4 {
   font-family: "Sorts Mill Goudy", serif;
 }
 
+.hamburguer {
+  position: sticky;
+  top: 0;
+}
 @media (min-width: 800px) {
   .hamburguer {
     display: none;
