pposition fixed nav

--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -2,7 +2,7 @@
 // ------------------Header------------------
 header {
   @include w800 () {
-    position: sticky;
+    position: fixed;
     top: 0;
   }
 }
