--- a/css/styles.css
+++ b/css/styles.css
@@ -257,13 +257,6 @@ h4 {
   color: #ffffff;
 }
 
-@media (max-width: 800px) {
-  header {
-    position: fixed;
-    top: 0;
-  }
-}
-
 .hero {
   width: 100%;
   position: sticky;
@@ -355,13 +348,16 @@ h4 {
   font-family: "Sorts Mill Goudy", serif;
 }
 
-.hamburguer {
-  position: sticky;
-  top: 0;
-}
 @media (min-width: 800px) {
   .hamburguer {
     display: none;
+  }
+}
+@media (max-width: 800px) {
+  .hamburguer {
+    position: fixed;
+    top: 0px;
+    width: 100%;
   }
 }
 
